# gemini-python-app

./: .gitignore  Dockerfile  pyproject.toml
src/gemini_python_app/: main.py
